crates/courier-ftp/src/components/status_bar/snapshots/courier_ftp__components__status_bar__snapshot_tests__status_bar_state_a_ascii_80.snap
---
source: crates/courier-ftp/src/components/status_bar/snapshot_tests.rs
expression: "bar(&state_a(&h), w, &sym, &t)"
---
 [TLS 1.3] | Auto | lim D:500K U:100K | [filters] | <>!= | Q: 12, 30.2 MiB      
--- styles ---
  0   0+1   Style::new().fg(Color::Reset).bg(Color::Indexed(236)).underline_color(Color::Reset)
  0   1+9   Style::new().fg(Color::Indexed(2)).bg(Color::Indexed(236)).underline_color(Color::Reset)
  0  10+10  Style::new().fg(Color::Reset).bg(Color::Indexed(236)).underline_color(Color::Reset)
  0  20+17  Style::new().fg(Color::Indexed(3)).bg(Color::Indexed(236)).underline_color(Color::Reset)
  0  37+3   Style::new().fg(Color::Reset).bg(Color::Indexed(236)).underline_color(Color::Reset)
  0  40+9   Style::new().fg(Color::Indexed(3)).bg(Color::Indexed(236)).underline_color(Color::Reset)
  0  49+3   Style::new().fg(Color::Reset).bg(Color::Indexed(236)).underline_color(Color::Reset)
  0  52+4   Style::new().fg(Color::Indexed(3)).bg(Color::Indexed(236)).underline_color(Color::Reset)
  0  56+24  Style::new().fg(Color::Reset).bg(Color::Indexed(236)).underline_color(Color::Reset)
