crates/courier-ftp/src/components/status_bar/snapshots/courier_ftp__components__status_bar__snapshot_tests__status_bar_state_c_60.snap
---
source: crates/courier-ftp/src/components/status_bar/snapshot_tests.rs
expression: "bar(&state_c(&h, &msg, &sym), w, &sym, &t)"
---
 – │ 🔐  │ ⚠2 │ Q: 3, 1.21 GiB       Copied URL to clipboard 
--- styles ---
  0   0+1   Style::new().fg(Color::Reset).bg(Color::Indexed(236)).underline_color(Color::Reset)
  0   1+1   Style::new().fg(Color::Indexed(246)).bg(Color::Indexed(236)).underline_color(Color::Reset)
  0   2+3   Style::new().fg(Color::Reset).bg(Color::Indexed(236)).underline_color(Color::Reset)
  0   5+1   Style::new().fg(Color::Indexed(0)).bg(Color::Indexed(6)).underline_color(Color::Reset)
  0   7+3   Style::new().fg(Color::Reset).bg(Color::Indexed(236)).underline_color(Color::Reset)
  0  10+2   Style::new().fg(Color::Indexed(0)).bg(Color::Indexed(6)).underline_color(Color::Reset)
  0  12+48  Style::new().fg(Color::Reset).bg(Color::Indexed(236)).underline_color(Color::Reset)
